fix missing unsafe use of getResource, and cleanup
Signed-off-by: Stefano Braghin <527806+stefano81@users.noreply.github.com>